Bug Fixes: duplicated initial history; Inserting empty texts; TextInput and TextOptions growing out of the screen

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   border: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 /* Canvas */
 
 .base-canvas {
@@ -41,7 +45,6 @@
   background-color: white;
   padding: 0.5rem 1rem;
   border-radius: 10px;
-  transform: translateX(-25%) translateY(-50px);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
 }
 
